--- a/index.html
+++ b/index.html
@@ -17,15 +17,15 @@
 
     <div class="row mt-2"> <!-- le dice básicamente que deje un margen superior de 20px aprox -->
         <div class="col text-center"> <!-- básicamente todo lo que ponga va a aparecer centrado -->
-            <button class="btn btn-danger">Nuevo juego</button>
-            <button class="btn btn-primary">Pedir carta</button>
-            <button class="btn btn-primary">Parar</button>
+            <button id= "btnNuevo" class="btn btn-danger">Nuevo juego</button>
+            <button id= "btnPedir" class="btn btn-primary">Pedir carta</button>
+            <button id= "btnParar" class="btn btn-primary">Parar</button>
         </div>
     </div>
 
     <div class="row container">
         <div class="col">
-            <h1>Jugador - <small>0 ptos</small></h1>
+            <h1>Jugador - <small id="smallUsuario">0 ptos</small></h1>
             <div id="jugador-cartas">
                 <img class="carta" src="assets/cartas/2C.png" >
                 <img class="carta" src="assets/cartas/2C.png" >
