30/12/2023: Correción de ortografía

--- a/index.html
+++ b/index.html
@@ -27,20 +27,14 @@
         <div class="col">
             <h1>Jugador - <small id="smallUsuario">0 ptos</small></h1>
             <div id="jugador-cartas">
-                <img class="carta" src="assets/cartas/2C.png" >
-                <img class="carta" src="assets/cartas/2C.png" >
-                <img class="carta" src="assets/cartas/2C.png" >
             </div>
         </div>
     </div>
 
     <div class="row container mt-2">
         <div class="col">
-            <h1>Diler - <small>0 ptos</small></h1>
+            <h1>Dealer - <small>0 ptos</small></h1>
             <div id="computador-cartas">
-                <img class="carta" src="assets/cartas/2C.png" >
-                <img class="carta" src="assets/cartas/2C.png" >
-                <img class="carta" src="assets/cartas/2C.png" >
             </div>
         </div>
     </div>
