30/12/2023: Se agrega id a la etiqueta small

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <div class="row container mt-2">
         <div class="col">
-            <h1>Dealer - <small>0 ptos</small></h1>
+            <h1>Dealer - <small id="smallComputador">0 ptos</small></h1>
             <div id="computador-cartas">
             </div>
         </div>
