--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
     <div class="row mt-2"> <!-- le dice básicamente que deje un margen superior de 20px aprox -->
         <div class="col text-center"> <!-- básicamente todo lo que ponga va a aparecer centrado -->
             <button id= "btnNuevo" class="btn btn-danger">Nuevo juego</button>
-            <button id= "btnPedir" class="btn btn-primary">Pedir carta</button>
-            <button id= "btnParar" class="btn btn-primary">Parar</button>
+            <button id= "btnPedir" disabled="disabled" class="btn btn-primary">Pedir carta</button>
+            <button id= "btnParar" disabled="disabled" class="btn btn-primary">Parar</button>
         </div>
     </div>
 
     <div class="row container">
         <div class="col">
             <h1>Jugador - <small id="smallUsuario">0 ptos</small></h1>
-            <div id="jugador-cartas">
+            <div id="jugador-cartas" class="divCartas">
             </div>
         </div>
     </div>
@@ -34,7 +34,7 @@
     <div class="row container mt-2">
         <div class="col">
             <h1>Dealer - <small id="smallComputador">0 ptos</small></h1>
-            <div id="computador-cartas">
+            <div id="computador-cartas" class="divCartas">
             </div>
         </div>
     </div>
@@ -43,6 +43,10 @@
 
     <script src="assets/js/underscore-min.js"></script>
     <script src="assets/js/juego.js"></script>
+
+    <script>
+        miModulo.nuevoJuego();
+    </script>
 
 </body>
 </html>
